frontend/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-assets
spec:
  type: ExternalName
  externalName: see2-solana.s3.amazonaws.com
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
  labels:
    name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
  - host: link.see2.club
    http:
      paths:
      # - pathType: Prefix
      #   path: "/assets"
      #   backend:
      #     service:
      #       name: frontend-assets
      #       port: 
      #         name: http
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port: 
              name: http
  tls:
  - hosts:
    - link.see2.club
    secretName: frontend-cert
